[package]
name = "bazel-cache"
version = "0.1.0"
authors = ["ianoc"]

[features]
default = []
native-tls-example = ["hyper-native-tls"]

[dependencies]
base64 = "0.4.0"
futures = "0.1.7"
futures-cpupool = "0.1"
httparse = "1.0"
typemap = "0.3"
url = "1.1"
plugin = "0.2"
modifier = "0.1"
log = "0.3"
conduit-mime-types = "0.7"
lazy_static = "0.2"
hyper = { git = "https://github.com/hyperium/hyper.git" }
hyper-native-tls = { version = "0.2", optional = true }
pretty_env_logger = "0.1"

[dev-dependencies]
num_cpus = "1.0"
spmc = "0.2"
